--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts npm run build",
-    "clean": "rm -rf node_modules/"
+    "build": "react-scripts build",
+    "clean": "rm -rf node_modules/",
+    "CI" : "npm run build"
   },
   "eslintConfig": {
     "extends": [
