--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-notifications": "^1.7.4",
     "react-scripts": "5.0.1",
+    "react-tooltip": "^5.10.0",
     "reactstrap": "^9.1.5",
     "sass": "^1.58.0",
     "web-vitals": "^2.1.4"
